// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package objects;

// SerializableMeta is the object metadata that will be stored serialized
message SerializableMeta {
	string content_type = 1;
	map<string, string> user_defined = 2;
}